--- a/.config/mako/config.example
+++ b/.config/mako/config.example
@@ -1,17 +1,17 @@
 sort=-time
 layer=overlay
-background-color=#0d0912D9
+background-color=#1b1d24D9
 width=500
 height=400
 border-size=3
-border-color=#986170
+border-color=#3C8AB7
 border-radius=0
 icons=1
 max-icon-size=50
 default-timeout=15000
 font="Source Han Sans CN" 15
 ignore-timeout=0
-text-color=#986170
+text-color=#3C8AB7
 margin=13,30
 padding=12,20
 text-alignment=left
