sway(keybind): Change the shortcut function
Change mod+m to mpd for music play and pause

--- a/.config/sway/config.d/keybind.example
+++ b/.config/sway/config.d/keybind.example
@@ -291,7 +291,7 @@ bindsym $mod+y exec foot yazi
 bindsym $mod+u exec mpv --player-operation-mode=pseudo-gui
 bindsym $mod+period exec foot ncmpcpp
 bindsym $mod+n exec foot nvim
-bindsym $mod+m exec musicpicker
+bindsym $mod+m exec mpc toggle
 bindsym $mod+comma exec sysmenu
 
 # Volume Key
