--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -137,6 +137,8 @@ scrollback-up-line=Control+k
 scrollback-down-page=Control+f
 scrollback-down-half-page=Control+d
 scrollback-down-line=Control+j
+font-increase=Control+Shift+plus
+font-decrease=Control+Shift+minus
 # clipboard-copy=Control+Shift+c XF86Copy
 # clipboard-paste=Control+Shift+v XF86Paste
 # primary-paste=Shift+Insert
