feat(lf/bindings.conf): add shortcuts to jump to a directory

--- a/.config/lf/bindings.conf
+++ b/.config/lf/bindings.conf
@@ -6,6 +6,8 @@ map D delete
 map gc cd ~/.config
 map gd cd ~/dotfiles
 map gl cd ~/.local
+map gp cd ~/Pictures
+map gv cd ~/Videos
 # map Q quitcd
 
 map zf $$EDITOR $(fzf)
