feat(lf): add the function of copying file names
- add the function of copying the selected file name to the clipboard, the shortcut key is yn
- add the function of copying the selected file name (without suffix) to the clipboard, the shortcut key is ye
- change the shortcut key of the original function of copying files to yy

--- a/.config/lf/bindings.conf
+++ b/.config/lf/bindings.conf
@@ -20,3 +20,8 @@ map a push :touch<space>
 map xm chmod
 
 map xx extract
+
+map y
+map yy copy
+map yn yank-basename
+map ye yank-basename-without-extension
