--- a/.config/lf/commands.conf
+++ b/.config/lf/commands.conf
@@ -95,6 +95,33 @@ cmd quitcd ${{
 	lf -remote "send $id quit"
 }}
 
+
+# cmd yank-name ${{
+#     set -f
+#         basename "$(readlink -f "$f")" | wl-copy
+# }}
+cmd yank-basename $basename -a -- $fx | head -c-1 | wl-copy
+
+cmd yank-basename-without-extension ${{
+    echo "$fx" |
+        xargs -r -d '\n' basename -a |
+        awk -e '{
+            for (i=length($0); i > 0; i--) {
+                if (substr($0, i, 1) == ".") {
+                    if (i == 1) print $0
+                    else print substr($0, 0, i-1)
+
+                    break
+                }
+            }
+
+            if (i == 0)
+                print $0
+        }' |
+        if [ -n "$fs" ]; then cat; else tr -d '\n'; fi |
+        wl-copy
+}}
+
 # cmd "Go ~/.config" %{{
 #     cd ~/.config
 # }}
