feat(lf/bindings.conf): add a shortcut to jump to the Downloads directory

--- a/.config/lf/bindings.conf
+++ b/.config/lf/bindings.conf
@@ -5,6 +5,7 @@ map D delete
 # map \ filter
 map gc cd ~/.config
 map gd cd ~/dotfiles
+map gD cd ~/Downloads
 map gl cd ~/.local
 map gp cd ~/Pictures
 map gv cd ~/Videos
