refactor(lf/bindings.conf): rebind shortcut

--- a/.config/lf/bindings.conf
+++ b/.config/lf/bindings.conf
@@ -11,9 +11,9 @@ map gp cd ~/Pictures
 map gv cd ~/Videos
 # map Q quitcd
 
-map zf $$EDITOR $(fzf)
+# map zf $$EDITOR $(fzf)
 map zp toggle-preview
-map Z fzf_jump
+map zf fzf_jump
 map R bulk-rename
 map A push :mkdir<space>
 map a push :touch<space>
